Creation of Private Repo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
 </section>
 
-<section id="gallery-section">
+<section id="coding-adventures">
 <h1>Coding Adventures</h1>
 <div class ="gallery">
   
@@ -53,6 +53,31 @@
     <a href="coding/DiscreteLaplacian.html">
       <p>Discrete Laplacian on Triangle Meshes</p>
       <img src="images/DiscreteLaplacian.png"/>
+    </a>
+  </div>
+  
+</div>
+</section>
+
+<section id="math-adventures">
+<h1>Math Adventures</h1>
+<div class ="gallery">
+  
+  <div class="gallery-item">
+    <a href="coding/ModelViewProjection.html">
+      <p>Model View Projection</p>
+    </a>
+  </div>
+  
+  <div class="gallery-item">
+    <a href="coding/HeatMethod.html">
+      <p>The Heat Method for Distance Computation</p>
+    </a>
+  </div>
+  
+  <div class="gallery-item">
+    <a href="coding/DiscreteLaplacian.html">
+      <p>Discrete Laplacian on Triangle Meshes</p>
     </a>
   </div>
   
