--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   </div>
   
   <div class="gallery-item">
-    <a href="coding/HeatMethod.html">
+    <a href="coding/HeatMethodBackup.html">
       <p>The Heat Method for Distance Computation</p>
-      <img src="images/HeatMethod.png"/>
+      <img src="images/HeatMethodBackup.png"/>
     </a>
   </div>
   
@@ -61,25 +61,9 @@
 
 <section id="math-adventures">
 <h1>Math Adventures</h1>
-<div class ="gallery">
+<div class="math-list">
   
-  <div class="gallery-item">
-    <a href="coding/ModelViewProjection.html">
-      <p>Model View Projection</p>
-    </a>
-  </div>
-  
-  <div class="gallery-item">
-    <a href="coding/HeatMethod.html">
-      <p>The Heat Method for Distance Computation</p>
-    </a>
-  </div>
-  
-  <div class="gallery-item">
-    <a href="coding/DiscreteLaplacian.html">
-      <p>Discrete Laplacian on Triangle Meshes</p>
-    </a>
-  </div>
+  <a href="math/simplicial_homology_and_cohomology.html">Simplicial Homology and Cohomology</a>
   
 </div>
 </section>
