Add work in progress

--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
 <div class ="gallery">
   
   <div class="gallery-item">
+    <a href="coding/PoissonSurfaceRecon.html">
+      <p>[🚧] Poisson Surface Reconstruction</p>
+      <img src="images/placeholder.png"/>
+    </a>
+  </div>
+  
+  <div class="gallery-item">
     <a href="coding/ModelViewProjection.html">
       <p>Model View Projection</p>
       <img src="images/ModelViewProjection.png"/>
@@ -43,7 +50,7 @@
   </div>
   
   <div class="gallery-item">
-    <a href="coding/HeatMethodBackup.html">
+    <a href="coding/HeatMethod.html">
       <p>The Heat Method for Distance Computation</p>
       <img src="images/HeatMethodBackup.png"/>
     </a>
@@ -63,7 +70,7 @@
 <h1>Math Adventures</h1>
 <div class="math-list">
   
-  <a href="math/simplicial_homology_and_cohomology.html">Simplicial Homology and Cohomology</a>
+  <a href="math/simplicial_homology_and_cohomology.html">[🚧] Simplicial Homology and Cohomology</a>
   
 </div>
 </section>
