CV and remove math section temporarely

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
       <img src="./images/profile.jpg">
     </div>
     <div class="right-side">
-      I'm a master student at
+      I'm a master student at the
       <a href="https://imc.uc.cl/" target="_blank">Instituto de Ingeniería Matemática y Computacional</a>
       in Pontificia Universidad Católica de Chile,
       working in <strong>operator learning</strong>.
       <p>
       On my free time I delve into the mathematical aspects of nice applications, mostly
       in <strong>geometry processing</strong>.
+      <p>
+      <a href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDJzXWzX8JYSYaa0kbrOfzMAeqQDeXwMWH0d5Q6BjuddZ4?e=EmHzOd" target="_blank">CV (in spanish)</a>
     </div>
   </div>
 </section>
@@ -60,15 +62,6 @@
       <img src="images/DiscreteLaplacian.png"/>
     </a>
   </div>
-  
-</div>
-</section>
-
-<section id="math-adventures">
-<h1>Math Adventures</h1>
-<div class="math-list">
-  
-  <a href="math/simplicial_homology_and_cohomology.html">[🚧] Simplicial Homology and Cohomology</a>
   
 </div>
 </section>
