--- a/index.html
+++ b/index.html
@@ -7,26 +7,29 @@
   <title>Sebastián Sánchez</title>
 </head>
 <body>
-<header>
-  <a href="index.html">Home</a>
-</header>
+<!-- <header> -->
+<!--   <a href="index.html">Home</a> -->
+<!-- </header> -->
 
 <main>
 <section id="bio-section">
   <div class="bio">
     <div class="left-side">
-      <img src="./images/profile.jpg">
+      <img src="./images/profile2.jpg">
     </div>
     <div class="right-side">
-      I'm a master student at the
-      <a href="https://imc.uc.cl/" target="_blank">Instituto de Ingeniería Matemática y Computacional</a>
-      in Pontificia Universidad Católica de Chile,
-      working in <strong>operator learning</strong>.
       <p>
-      On my free time I delve into the mathematical aspects of nice applications, mostly
-      in <strong>geometry processing</strong>.
+      Welcome to my website, here you will find the mathematical aspects of
+      nice applications, mostly in <strong>geometry processing</strong>.
+      </p>
+
       <p>
-      <a href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDJzXWzX8JYSYaa0kbrOfzMAeqQDeXwMWH0d5Q6BjuddZ4?e=EmHzOd" target="_blank">CV (in spanish)</a>
+      I have a Master's degree in applied math (<a href="">thesis</a>) 
+      and a Bachelor's degree in pure math.
+      </p>
+
+      <a href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDhaR6wt5tORI4oJCgZaJWfATFwpMnW_hKhTQ5DoJEL5yQ?e=1ldxvB" target="_blank">CV (spanish)</a>
+      <a href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDbNrlHv6vzQahEQlJMHGZ8AUBb41HDd6Bzt9pXX4rZ6T8?e=gAnfCt">CV (english) </a>
     </div>
   </div>
 </section>
@@ -34,13 +37,6 @@
 <section id="coding-adventures">
 <h1>Coding Adventures</h1>
 <div class ="gallery">
-  
-  <div class="gallery-item">
-    <a href="coding/PoissonSurfaceRecon.html">
-      <p>[🚧] Poisson Surface Reconstruction</p>
-      <img src="images/placeholder.png"/>
-    </a>
-  </div>
   
   <div class="gallery-item">
     <a href="coding/ModelViewProjection.html">
@@ -66,6 +62,16 @@
 </div>
 </section>
 
+<section id="math-adventures">
+<h1>Math adventures</h1>
+<div class="math-list">
+  
+    <a href="math/logistic_regression.html">
+      <p>Understanding Logistic Regression</p>
+    </a>
+  
+</div>
+</section>
 </main>
 
 <footer>
