--- a/index.html
+++ b/index.html
@@ -4,33 +4,45 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Sebastián Sánchez</title>
 </head>
 <body>
-<!-- <header> -->
-<!--   <a href="index.html">Home</a> -->
-<!-- </header> -->
+
 
 <main>
-<section id="bio-section">
-  <div class="bio">
+<section class="bio">
     <div class="left-side">
       <img src="./images/profile2.jpg">
+      <div class="icons">
+        <a class="icon" href="https://www.linkedin.com/in/sebasti%C3%A1n-s%C3%A1nchez-s/">
+          <i class="fa fa-linkedin"></i>
+        </a>
+        <a class="icon" href="https://github.com/sebastian-sanchez-s/">
+          <i class="fa fa-github"></i>
+        </a>
+      </div>
     </div>
     <div class="right-side">
       <p>
-      Welcome to my website, here you will find the mathematical aspects of
-      nice applications, mostly in <strong>geometry processing</strong>.
+      Welcome to my website. I'm Sebastián Sánchez.
+      Here I post the mathematical aspects of
+      nice applications, mostly in <strong>geometry processing</strong>
+      and <strong>statistic and data science</strong>.
       </p>
 
       <p>
-      I have a Master's degree in applied math (<a href="">thesis</a>) 
-      and a Bachelor's degree in pure math.
+      I did my master in applied math studying approximation
+      of operators between infinite dimensional spaces and its
+      application to the operator learning problem.
+      Previously, I earned by Bachelors degree in pure math
+      (with a minor in computer science).
+      My undergrad project was on surface reconstruction from
+      unorganized points.
       </p>
 
       <a href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDhaR6wt5tORI4oJCgZaJWfATFwpMnW_hKhTQ5DoJEL5yQ?e=1ldxvB" target="_blank">CV (spanish)</a>
       <a href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDbNrlHv6vzQahEQlJMHGZ8AUBb41HDd6Bzt9pXX4rZ6T8?e=gAnfCt">CV (english) </a>
-    </div>
   </div>
 </section>
 
@@ -38,26 +50,20 @@
 <h1>Coding Adventures</h1>
 <div class ="gallery">
   
-  <div class="gallery-item">
-    <a href="coding/ModelViewProjection.html">
-      <p>Model View Projection</p>
-      <img src="images/ModelViewProjection.png"/>
-    </a>
-  </div>
+  <a class="gallery-item" href="coding/ModelViewProjection.html">
+    <p>Model View Projection</p>
+    <img src="images/ModelViewProjection.png"/>
+  </a>
   
-  <div class="gallery-item">
-    <a href="coding/HeatMethod.html">
-      <p>The Heat Method for Distance Computation</p>
-      <img src="images/HeatMethodBackup.png"/>
-    </a>
-  </div>
+  <a class="gallery-item" href="coding/HeatMethod.html">
+    <p>The Heat Method for Distance Computation</p>
+    <img src="images/HeatMethodBackup.png"/>
+  </a>
   
-  <div class="gallery-item">
-    <a href="coding/DiscreteLaplacian.html">
-      <p>Discrete Laplacian on Triangle Meshes</p>
-      <img src="images/DiscreteLaplacian.png"/>
-    </a>
-  </div>
+  <a class="gallery-item" href="coding/DiscreteLaplacian.html">
+    <p>Discrete Laplacian on Triangle Meshes</p>
+    <img src="images/DiscreteLaplacian.png"/>
+  </a>
   
 </div>
 </section>
@@ -67,21 +73,14 @@
 <div class="math-list">
   
     <a href="math/logistic_regression.html">
-      <p>Understanding Logistic Regression</p>
+      <p>An explanation of the Logistic Regression formula</p>
     </a>
   
 </div>
 </section>
 </main>
 
-<footer>
-  <div class="footer-left">
-    <a href="https://github.com/sebastian-sanchez-s/" target="_blank">
-    <svg aria-hidden="true" class="octicon octicon-mark-github" height="18" width="18"version="1.1" viewBox="0 0 16 16"><path fill="white" fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path> </svg>
-    GitHub</a>
-  </div>
-  <div class="footer-center"></div>
-  <div class="footer-right"></div>
-</footer>
+
+
 </body>
 </html>
