Wasserstein animation + folder structure

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <div class="right-side">
       <p>
       Welcome to my website. I'm Sebastián Sánchez.
-      Here I post the mathematical aspects of
-      nice applications, mostly in <strong>geometry processing</strong>
-      and <strong>statistic and data science</strong>.
+      Here I post the mathematical approach to some
+      applications, mostly in <strong>geometry processing</strong>
+      and <strong>statistic</strong>.
       </p>
 
       <p>
@@ -50,19 +50,24 @@
 <h1>Coding Adventures</h1>
 <div class ="gallery">
   
-  <a class="gallery-item" href="coding/ModelViewProjection.html">
+  <a class="gallery-item" href="coding/WassersteinAnimation/WassersteinAnimation.html">
+    <p>Animaciones de Wasserstein</p>
+    <img src="covers/WassersteinAnimation.png"/>
+  </a>
+  
+  <a class="gallery-item" href="coding/ModelViewProjection/ModelViewProjection.html">
     <p>Model View Projection</p>
-    <img src="images/ModelViewProjection.png"/>
+    <img src="covers/ModelViewProjection.png"/>
   </a>
   
-  <a class="gallery-item" href="coding/HeatMethod.html">
+  <a class="gallery-item" href="coding/HeatMethod/HeatMethod.html">
     <p>The Heat Method for Distance Computation</p>
-    <img src="images/HeatMethodBackup.png"/>
+    <img src="covers/HeatMethodBackup.png"/>
   </a>
   
-  <a class="gallery-item" href="coding/DiscreteLaplacian.html">
+  <a class="gallery-item" href="coding/DiscreteLaplacian/DiscreteLaplacian.html">
     <p>Discrete Laplacian on Triangle Meshes</p>
-    <img src="images/DiscreteLaplacian.png"/>
+    <img src="covers/DiscreteLaplacian.png"/>
   </a>
   
 </div>
@@ -72,7 +77,7 @@
 <h1>Math adventures</h1>
 <div class="math-list">
   
-    <a href="math/logistic_regression.html">
+    <a href="math/LogisticRegression/LogisticRegression.html">
       <p>An explanation of the Logistic Regression formula</p>
     </a>
   
