--- a/math/LogisticRegression/LogisticRegression.html
+++ b/math/LogisticRegression/LogisticRegression.html
@@ -192,7 +192,7 @@ the following conditions arise:</p>
 <li><p><span class="math inline">\(f(X) \ge 0\)</span> and <span
 class="math inline">\(f(X)\cdot 1 = 1\)</span>.</p></li>
 <li><p><span class="math inline">\(f(X^k) = p^k\)</span> should peak
-only in the coordinate <span class="math inline">\(\argmax_{i}
+only in the coordinate <span class="math inline">\(\textup{argmax}_{i}
 Y^{k}_i\)</span>. This is handled by the information theoretic entropy,
 acting on <span class="math inline">\(p=f(X)\)</span>; maximizing this
 formula means that we want all probabilities to be as close to zero
