--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="stylesheets/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>Sebastián Sánchez</title>
 </head>
@@ -30,8 +31,7 @@
     <p>
     Welcome. My name is Sebastián Sánchez.
     Here you can find a <q>mathematician viewpoint</q>
-    on some topics of my interest, from
-    <strong>computer graphics</strong> to <strong>statistic</strong>.
+    on some topics of my interest.
     </p>
 
     <p>
@@ -57,8 +57,12 @@
   </section>
 
   <ul class="carousel">
-    <li id="coding-adventures">
-      <h1>Coding Adventures</h1>
+    <li class="adventures">
+      <div class="adventures-header">
+        <button><i class="fa-solid fa-arrow-left"></i></button>
+        <h1>Coding Adventures</h1>
+        <button><i class="fa-solid fa-arrow-right"></i></button>
+      </div>
       <div class ="gallery">
         
         <a class="gallery-item" href="coding/WassersteinAnimation/WassersteinAnimation.html">
@@ -84,8 +88,12 @@
       </div>
     </li>
 
-    <li id="math-adventures">
-      <h1>Math adventures</h1>
+    <li class="adventures">
+      <div class="adventures-header">
+        <button><i class="fa-solid fa-arrow-left"></i></button>
+        <h1>Math adventures</h1>
+        <button><i class="fa-solid fa-arrow-right"></i></button>
+      </div>
       <div class="math-list">
         
           <a href="math/LogisticRegression/LogisticRegression.html">
@@ -98,9 +106,11 @@
 </main>
 
 <script>
+  /*
+  Glances the other entry of the carousel until the 
+  viewer scrolls
+  */
   const carousel = document.querySelector(".carousel");
-  const nextSection = document.querySelector("#math-adventures");
-  const carouselChildren = carousel.querySelectorAll("li");
 
   let hasNotScroll = true;
   let timerId;
@@ -112,9 +122,9 @@
     }
 
     carousel.style.scrollSnapType = "";
-    carouselChildren.forEach((child) => {
-      child.style.scrollSnapAlign = "";
-    });
+    for( const child of carousel.children ){
+          child.style.scrollSnapAlign = "";
+    }
 
     setTimeout(() => {
       carousel.scrollTo({left: 200, behavior: "smooth"});
@@ -122,9 +132,9 @@
 
     setTimeout(() => {
       carousel.style.scrollSnapType = "x mandatory";
-      carouselChildren.forEach((child) => {
-        child.style.scrollSnapAlign = "center";
-      });
+      for( const child of carousel.children ){
+            child.style.scrollSnapAlign = "center";
+      }
       carousel.scrollTo({right: 500, behavior: "smooth"});
     }, 2500);
 
@@ -136,6 +146,23 @@
   });
 
   timerId = setTimeout(glanceCarousel, 0);
+
+  let currCarouselIndex = 0;
+  function scrollIntoView(increment) {
+    increment = Math.min(Math.max(increment, -1), 1);
+    currCarouselIndex = (currCarouselIndex + increment) % carousel.children.length;
+    currCarouselIndex = Math.min(Math.max(currCarouselIndex, 0), carousel.children.length);
+    carousel.children[currCarouselIndex].scrollIntoView({behavior: "smooth"});
+  }
+
+  for(const button of carousel.querySelectorAll("button")){
+    if( button.children[0].className.includes("left") ){
+      button.addEventListener("click", () => scrollIntoView(-1));
+    }
+    else if( button.children[0].className.includes("right") ){
+      button.addEventListener("click", () => scrollIntoView(1));
+    }
+  }
 </script>
 
 
