django project and typos

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ formalization an optimization problem arises that give us very naturally the
 characteristic formula used in logistic regression.
 </p>
             </div>
-            <a class="project-list-item-img" href="math/LogisticRegression/LogisticRegression.html">
+            <a class="project-list-item-img" href="math/LogisticRegression/LogisticRegression.html" target="_blank">
               <img src="covers/LogisticRegression.png"/>
             </a>
           </div>
@@ -132,7 +132,7 @@ target="_blank">github repository</a> contains some of the code generated
 through this thesis.
 </p>
             </div>
-            <a class="project-list-item-img" href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDpc1TxThaYSYNLo1uX14hwAdn7O0o0K3sq7dAP7M7bziI?e=U2ct7a">
+            <a class="project-list-item-img" href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDpc1TxThaYSYNLo1uX14hwAdn7O0o0K3sq7dAP7M7bziI?e=U2ct7a" target="_blank">
               <img src="covers/MasterThesis.png"/>
             </a>
           </div>
@@ -150,7 +150,7 @@ problem.
 The document is part of a summer undergrad research project (roughly 2 months)
 at Pontificia Universidad Católica de Chile supervised by 
 <a href="https://www.ing.uc.cl/academicos-e-investigadores/elwin-van-t-wout/"
-target="_blank">Ph.D. Elwin Van\'t Wout</a>, and the code is now part of the <a
+target="_blank">Ph.D. Elwin Van't Wout</a>, and the code is now part of the <a
 href="https://github.com/optimuslib/optimus"
 target="_blank">OptimusLib</a> software for 3D wave scattering.
 </p>
@@ -160,7 +160,7 @@ target="_blank">github repository</a> for details and better
 visualization, since the conversion to html is not that great.
 </p>
             </div>
-            <a class="project-list-item-img" href="math/WaveScattering/WaveScattering.html">
+            <a class="project-list-item-img" href="math/WaveScattering/WaveScattering.html" target="_blank">
               <img src="covers/WaveScattering.png"/>
             </a>
           </div>
@@ -171,6 +171,35 @@ visualization, since the conversion to html is not that great.
 
     <li class="adventure">
       <div class="project-list">
+        
+          <div class="project-list-item" >
+            <div class="project-list-item-description">
+              <h1><a href="https://github.com/sebastian-sanchez-s/MEBA" target="_blank">Django Survey (in progress)</a></h1>
+              <p>
+The app consists of Pollsters, Respondents, Surveys, Questions
+and Answers, as show the entity-relation diagram on the right.
+I design the database such that common data retrieval
+queries are efficient i.e. getting all answers to a question.
+</p>
+<p>
+I used class based views, permissions mixin, and forms.
+The architecture is decoupled i.e. templates do not
+mess with business logic and queries are handled mostly by models.
+I put a lot of effort into writing idiomatic django code.
+</p>
+<p>
+This is work in progress, what is left is:
+<ul>
+  <li>styling</li>
+  <li>minor permission handling</li>
+  <li>deployment</li>
+</ul>
+</p>
+            </div>
+            <a class="project-list-item-img" href="https://github.com/sebastian-sanchez-s/MEBA" target="_blank">
+              <img src="covers/DjangoSurveyApp.png"/>
+            </a>
+          </div>
         
           <div class="project-list-item" >
             <div class="project-list-item-description">
@@ -187,12 +216,15 @@ This project was developed during
 a winter undergrad research project (roughly a month) at Pontificia
 Universidad Católica de Chile supervised by <a
 href="https://www.mat.uc.cl/~federico.castillo/" target="_blank">Ph.D.
-Federico Castillo Castillo</a>.' Please refer to the <a
+Federico Castillo Castillo</a>.
+</p>
+<p>
+Please refer to the <a
 href="https://github.com/sebastian-sanchez-s/IPI-23-2211">github
 repository</a> for details.
 </p>
             </div>
-            <a class="project-list-item-img" href="https://github.com/sebastian-sanchez-s/IPI-23-2211">
+            <a class="project-list-item-img" href="https://github.com/sebastian-sanchez-s/IPI-23-2211" target="_blank">
               <img src="covers/YoungTableauxOuterSums.png"/>
             </a>
           </div>
@@ -202,7 +234,7 @@ repository</a> for details.
               <h1><a href="https://github.com/sebastian-sanchez-s/BitMap" target="_blank">Bitmap library in C</a></h1>
               A simple library to create bmp images with multiple header versions. Aimed to my learning process of image processing.
             </div>
-            <a class="project-list-item-img" href="https://github.com/sebastian-sanchez-s/BitMap">
+            <a class="project-list-item-img" href="https://github.com/sebastian-sanchez-s/BitMap" target="_blank">
               <img src="covers/Bitmap.png"/>
             </a>
           </div>
